--- a/library_app/templates/library_app/add_review.html
+++ b/library_app/templates/library_app/add_review.html
@@ -1,26 +1,17 @@
 {% extends 'library_app/base_user.html' %}
-{% block title %}Add Review{% endblock %}
+{% block title %}Review {{ book.title }}{% endblock %}
 
 {% block content %}
 <h2>Review: {{ book.title }}</h2>
 
-<form method="post">
-  {% csrf_token %}
-
-  <label>Rating:</label><br>
-  <select name="rating" required>
-    <option value="1">⭐</option>
-    <option value="2">⭐⭐</option>
-    <option value="3">⭐⭐⭐</option>
-    <option value="4">⭐⭐⭐⭐</option>
-    <option value="5">⭐⭐⭐⭐⭐</option>
-  </select>
-  <br><br>
-
-  <label>Comment:</label><br>
-  <textarea name="comment" rows="4" required></textarea>
-  <br><br>
-
-  <button type="submit">Submit Review</button>
+<form method="POST">
+    {% csrf_token %}
+    <label>Rating (1-5):</label>
+    <input type="number" name="rating" min="1" max="5" required>
+    <br><br>
+    <label>Comment:</label>
+    <textarea name="comment" rows="4"></textarea>
+    <br><br>
+    <button type="submit" class="btn btn-success">Submit Review</button>
 </form>
 {% endblock %}
