--- a/library_app/templates/library_app/admin_orders.html
+++ b/library_app/templates/library_app/admin_orders.html
@@ -20,20 +20,20 @@
     <td>{{ order.date_rent }}</td>
     <td>{{ order.date_return|default:"Not returned" }}</td>
     <td>
-    {% if order.status == 'pending' %}
-        <form action="{% url 'admin_accept_order' order.id %}" method="post" style="display:inline;">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-success">Accept</button>
-        </form>
-
-        <form action="{% url 'admin_refuse_order' order.id %}" method="post" style="display:inline;">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-danger">Refuse</button>
-        </form>
+    {% if order.status == 'waiting' %}
+    <form method="POST" action="{% url 'admin_accept_order' order.id %}" style="display:inline;">
+        {% csrf_token %}
+        <button class="btn-accept">Accept</button>
+    </form>
+    <form method="POST" action="{% url 'admin_refuse_order' order.id %}" style="display:inline;">
+        {% csrf_token %}
+        <button class="btn-refuse">Refuse</button>
+    </form>
     {% else %}
-        {{ order.status|title }}
+    <span>{{ order.get_status_display }}</span>
     {% endif %}
 </td>
+
 
 </tr>
 {% empty %}
