--- a/library_app/templates/library_app/book_detail_modal.html
+++ b/library_app/templates/library_app/book_detail_modal.html
@@ -1,4 +1,4 @@
-{% extends 'library_app/base_user.html' %}
+<!--{% extends 'library_app/base_user.html' %}
 
 {% block title %}{{ book.title }} | Book Details{% endblock %}
 
@@ -7,10 +7,9 @@
 <div class="modal-overlay">
     <div class="modal-box">
 
-        <!-- ❌ CLOSE -->
         <a href="{% url 'user_home' %}" class="close-btn">&times;</a>
 
-        <!-- 📘 BOOK IMAGE -->
+        
         {% if book.image %}
             <img src="{{ book.image }}" class="modal-cover">
         {% else %}
@@ -39,4 +38,4 @@
     </div>
 </div>
 
-{% endblock %}
+{% endblock %}-->
