--- a/library_app/templates/library_app/edit_profile.html
+++ b/library_app/templates/library_app/edit_profile.html
@@ -27,6 +27,14 @@
         Save Changes
     </button>
 
+    <button
+        type="button"
+        onclick="window.history.back();"
+        style="background-color:#854049; color:white;"
+    >
+        Cancel
+    </button>
+
 </form>
 
 {% endblock %}
