--- a/library_app/templates/library_app/book_detail_modal.html
+++ b/library_app/templates/library_app/book_detail_modal.html
@@ -1,4 +1,4 @@
-<!--{% extends 'library_app/base_user.html' %}
+{% extends 'library_app/base_user.html' %}
 
 {% block title %}{{ book.title }} | Book Details{% endblock %}
 
@@ -38,4 +38,4 @@
     </div>
 </div>
 
-{% endblock %}-->
+{% endblock %}
