--- a/library_app/templates/library_app/login.html
+++ b/library_app/templates/library_app/login.html
@@ -1,10 +1,33 @@
 {% load static %}
+{% load socialaccount %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <style>
+        /* Make Google button match the main login button */
+        .social-login {
+            display: block;
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 5px;
+            background-color: #4285F4; /* Google blue */
+            color: white;
+            font-size: 16px;
+            text-align: center;
+            cursor: pointer;
+            text-decoration: none;
+        }
+
+        .social-login:hover {
+            background-color: #357ae8;
+        }
+    </style>
 </head>
 <body>
 
@@ -25,6 +48,10 @@
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
     </form>
+
+    <a class="social-login" href="{% provider_login_url 'google' %}">
+        Sign in with Google
+    </a>
 
     <p>Don't have an account?
         <a href="{% url 'signup' %}">Sign up here</a>
